--- a/Classe Griglia/makefile
+++ b/Classe Griglia/makefile
@@ -5,9 +5,9 @@ LIBSROOT   = `root-config --glibs`
 
 all: Main
 
-GridClass.o: grid_class.cpp
+grid_class.o: grid_class.cpp
 	$(CC) $(CFLAGS) -c grid_class.cpp  $(CFLAGSROOT)
-Main: Main.cpp GridClass.o
-	$(CC) $(CFLAGS) -o Main Main.cpp GridClass.o $(CFLAGSROOT) $(LIBSROOT)
+Main: Main.cpp grid_class.o
+	$(CC) $(CFLAGS) -o Main Main.cpp grid_class.o $(CFLAGSROOT) $(LIBSROOT)
 clean:
 	rm *.o
